# gilded-rose-kata

./: .pre-commit-config.yaml  README.md  pyproject.toml
gilded_rose/: __init__.py
tests/: gold.txt  test_gilded_rose.py  texttest_fixture.py
