[tool.poetry]
name = "gilded-rose"
version = "0.1.0"
description = ""
authors = ["Stephen Snow <stephen.c.snow@gmail.com>"]
readme = "README.md"
packages = [{include = "gilded_rose"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
